# flight-blender

./: .codespellignore  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile-dev  MIGRATION_PLAN.md  PLUGINS.md  Procfile  README.md  alembic.ini  build_locally.sh  codecov.yml  coverage.json  docker-compose-dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_tests.sh  start_flight_blender.sh
.github/: copilot-instructions.md
.github/scripts/: pr-comment.js
.github/workflows/: code-quality.yml  dependency-update.yml  docker-build.yml  docker-publish.yml  interuss-qualification.yml  iso-audit-report.yml  linting.yml  security.yml  verification.yml
alembic/: env.py
alembic/versions/: 8c998de89757_initial_sqlalchemy_schema.py
api/: argon-server-1.0.0-resolved.yaml  flight-blender-server-1.0.0-resolved.yaml  flight_blender_api.postman_collection.json
auth_helper/: common.py  dss_auth_helper.py  utils.py
cisp_operations/: apps.py
common/: altitude_helper.py  auth_token_audience_helper.py  base_traffic_data_fuser.py  data_definitions.py  database_operations.py  plugin_loader.py  redis_stream_operations.py  tests_plugin_loader.py  tests_timestamp_helpers.py  utils.py
conformance_monitoring_operations/: conformance_checks_handler.py  custom_signals.py  data_definitions.py  models.py  operation_state_helper.py  operator_conformance_notifications.py  tasks.py  utils.py  views.py
conformance_monitoring_operations/migrations/: 0002_taskscheduler_session_id_and_more.py  0003_conformancerecord.py
constraint_operations/: apps.py  constraints_helper.py  data_definitions.py  dss_constraints.helper.py  dss_constraints_helper.py  models.py  urls.py  views.py
constraint_operations/migrations/: 0001_initial.py  0002_constraintdetail_delete_constraint_and_more.py  0005_constraintreference_flight_declaration.py  0006_compositeconstraint.py  0007_alter_compositeconstraint_declaration.py
daa_operations/: apps.py
deployment_support/: .env.local  README.md
detect_and_avoid_operations/: apps.py
entrypoints/no-database/: entrypoint-beat.sh  entrypoint-celery.sh  entrypoint.sh
entrypoints/with-database/: entrypoint-beat.sh  entrypoint-celery.sh  entrypoint-prod.sh  entrypoint.sh
example_plugins/: hello_world_engine.py  hello_world_fuser.py  hello_world_volume_generator.py  tests.py
flight_blender/: __init__.py  asgi.py  celery.py  config.py  main.py  settings.py  urls.py
flight_blender/auth/: __init__.py  dss_auth_helper.py  jwt_bearer.py
flight_blender/common/: plugin_loader.py  redis_stream_operations.py
flight_blender/models/: __init__.py  base.py  conformance.py  daa.py  flight_declaration.py  flight_feed.py  geo_fence.py  notification.py  surveillance.py
flight_blender/routers/: __init__.py  conformance.py  daa.py  flight_declaration.py  flight_feed.py  geo_fence.py  scd.py  surveillance.py  uss.py  weather.py
flight_blender/schemas/: __init__.py  flight_declaration.py  flight_feed.py  geo_fence.py  scd.py  surveillance.py  weather.py
flight_blender/services/: deconfliction.py  traffic_data_fuser.py
flight_blender/tasks/: __init__.py  celery_app.py  conformance.py  flight_declaration.py  flight_feed.py  geo_fence.py  rid.py  surveillance.py
flight_blender/websocket/: __init__.py
flight_declaration_operations/: admin.py  apps.py  custom_utils.py  custom_volume_generation.py  data_definitions.py  deconfliction_engine.py  deconfliction_protocol.py  example_deconfliction_engine.py  flight_declarations_rtree_helper.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
flight_feed_operations/: apps.py  data_definitions.py  flight_stream_helper.py  models.py  pki_helper.py  rid_telemetry_helper.py  tasks.py  urls.py  views.py
geo_fence_operations/: buffer_helper.py  common.py  data_definitions.py  models.py  rtree_geo_fence_helper.py  serializers.py  tasks.py  urls.py  views.py
notification_operations/: README.md  models.py  notification_helper.py  tests.py
rid_operations/: data_definitions.py  dss_rid_helper.py  models.py  rid_telemetry_monitoring.py  rid_utils.py  rtree_helper.py  tasks.py  tests.py  urls.py  view_port_ops.py  views.py
scd_operations/: dss_scd_helper.py  flight_planning_data_definitions.py  opint_helper.py  scd_data_definitions.py  scd_test_harness_helper.py  utils.py  views.py
services/: weather_service.py
src/flight_blender/: __init__.py  (+9 more)
surveillance_monitoring_operations/: admin.py  apps.py  consumers.py  custom_signals.py  custom_utils.py  data_definitions.py  metric_calculator.py  models.py  routing.py  tasks.py  tests.py  traffic_data_fuser_protocol.py  urls.py  utils.py  views.py
tests/: conftest.py  fakes.py  test_auth_verification.py  test_common.py  test_common_database_operations.py  test_common_helpers.py  test_common_redis_stream_operations.py  test_common_timestamp_helpers.py  test_compose_beat.py  test_conformance_api.py  test_conformance_engine.py  test_conformance_monitoring_operations.py  test_conformance_operations.py  test_conformance_ops.py  test_conformance_schedule.py  test_conformance_state_helper.py  test_conformance_task_wiring.py  test_constraint.py  test_constraint_operations_fastapi.py  test_custom_volume_generation.py  test_database_operations.py  test_deconfliction_engine.py  test_deconfliction_wiring.py  test_example_plugins.py  test_flight_declaration_operations.py  test_flight_declarations_volume_generation.py  test_flight_feed_notification.py  test_flight_feed_operations.py  test_flight_feed_operations_fastapi.py  test_flight_feed_session_index.py  test_geo_awareness_harness.py  test_geo_awareness_scope.py  test_geo_fence_operations.py  test_geo_fence_operations_fastapi.py  test_geo_fence_tasks.py  test_geo_zone_parsing.py  test_import_architecture.py  test_notification_helper.py  test_notification_persistence.py  test_notifications_helper.py  (+46 more)
uss_operations/: rid_data_definitions.py  urls.py  uss_data_definitions.py  views.py
weather_monitoring_operations/: views.py
(+429 files in other folders)
