[project]
name = "flight-blender"
version = "0.1.0"
authors = [{ name = "Hrishikesh Ballal", email = "hrishi@openskies.sh" }]
description = "Flight Blender"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14,<3.15"

keywords = ["Flight Blender"]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "arrow==1.4.0",
    "celery==5.6.3",
    "cryptography==48.0.1",
    "dacite==1.9.2",
    "geojson==3.2.0",
    "uvicorn[standard]==0.49.0",
    "http-message-signatures==0.5.0",
    "implicitdict==4.0.1",
    "jwcrypto==1.5.7",
    "marshmallow==4.1.2",
    "pandas>=2.3.0",
    "pika==1.3.2",
    "psycopg2-binary==2.9.12",
    "pyjwt==2.13.0",
    "pyproj==3.7.2",
    "requests==2.34.2",
    "rtree==1.4.0",
    "shapely==2.1.2",
    "tldextract==5.3.1",
    "uas-standards==3.4.0",
    "wait-for-it==2.3.0",
    "loguru==0.7.3",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.23.0",
    "bandit[sarif]>=1.8.3",
    "codespell>=2.4.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "ruff>=0.11.4",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.2.0",
    "fakeredis>=2.36.0",
]

[tool.pyright]
typeCheckingMode = "basic"
reportAbstractUsage = "none"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
env = [
    "USE_LOCAL_SQLITE_DATABASE=1",
    "DATABASE_URL=sqlite:////tmp/flight_blender_tests.sqlite3",
    "BYPASS_AUTH_TOKEN_VERIFICATION=1",
]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/tests.py",
    "*/test_*.py",
    ".venv/*",
    "manage.py",
    "flight_blender/asgi.py",
    "flight_blender/celery.py",
    "flight_blender/settings.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_blender"]

[tool.codespell]
skip = ["**/redis.conf", "uv.lock"]
ignore-words = ".codespellignore"
quiet-level = 2

[tool.bandit]
exclude_dirs = [
    ".venv",
    "tests",
    "*/migrations/*",
    "*/tests.py",
    "*tests.py",
    "*/test_*.py",
    "*/tests_*.py",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
    "tests",
]
line-length = 150
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "PLC0415"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"src/flight_blender/infrastructure/celery/task_scheduler.py" = ["PLC0415"]
"src/flight_blender/common/database_operations.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["flight_blender"]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
